# utanet-lyric-topic-discovery

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/raw/: artists.csv  utanet.csv
src/: scrape_lyrics.py  scrape_utanet.py
src/clustering/: cluster.py  main_cluster.py  preprocessing.py
src/scraper/: main_scraper.py  scrape_artists.py  scrape_lyrics.py  utils.py
